[package]
name = "micrometer"
version = "0.1.0"
edition = "2021"
authors = ["Luca De Martini <luca.de.martini@protonmail.com>"]

[features]
default = ["perforation", "instant"]
enable = []
instant = []
perforation = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
once_cell = "1.17.1"
thread_local = "1.1.7"
