[package]
name = "micrometer"
description = "Profiling for fast, high frequency events in multithreaded applications with low overhead"
version = "0.2.5"
edition = "2021"
authors = ["Luca De Martini <luca.de.martini@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/imDema/micrometer-rs"

[features]
default = ["perforation-1k", "instant"]
enable = []
instant = []
perforation = []
perforation-128 = ["perforation"]
perforation-1k = ["perforation"]
perforation-16k = ["perforation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
once_cell = "1.18.0"
thread_local = "1.1.7"

[dev-dependencies]
tempfile = "3.6.0"

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["enable"]
